--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -17,7 +21,8 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
+  background-color: rgb(242, 242, 242);
 }
 
 @layer utilities {
@@ -25,3 +30,5 @@ body {
     text-wrap: balance;
   }
 }
+
+
